# icfpc2024

./: .gitignore  README.md  cabal.project  db_settings  icfpc2024.cabal
app/: API.hs  AnnealBoth.hs  AnnealMicro.hs  AnnealRoute.hs  AnnealRouteUnweighted.hs  Compress.hs  Efficiency.hs  GreedyRoute.hs  LambdaManBreadth.hs  LambdaManGreedy.hs  LambdaManManual.hs  LambdaManVis.hs  Lambdaman.hs  Manoeuvre.hs  Spaceship.hs  SpaceshipDumb.hs  SpaceshipGreedy.hs  SpaceshipSim.hs  ThreeD.hs
lib/ICFPC/: API.hs  DB.hs  Dijkstra.hs  LambdaMan.hs  Language.hs  Spaceship.hs
lib/ICFPC/DB/: LambdaMan.hs  Spaceship.hs
lib/ICFPC/LambdaMan/: BreadthFirst.hs  Graph.hs  Greedy.hs
lib/ICFPC/Language/: Combinators.hs  Eval.hs  Pretty.hs  TH.hs
lib/ICFPC/Spaceship/: Greedy.hs  Manoeuvre.hs
specs/: 3d.md
