cabal-version: 3.0
name: icfpc2024
version: 0.0.0.0
extra-source-files: token

common common
    default-language: GHC2021
    default-extensions:
        AllowAmbiguousTypes
        ApplicativeDo
        Arrows
        BlockArguments
        DefaultSignatures
        DeriveAnyClass
        DerivingVia
        DuplicateRecordFields
        FunctionalDependencies
        GADTs
        ImplicitParams
        ImpredicativeTypes
        IncoherentInstances
        LambdaCase
        LexicalNegation
        LiberalTypeSynonyms
        LinearTypes
        MagicHash
        MonadComprehensions
        MultiWayIf
        NegativeLiterals
        NondecreasingIndentation
        NPlusKPatterns
        NumDecimals
        OverloadedLabels
        OverloadedRecordDot
        OverloadedStrings
        PackageImports
        ParallelListComp
        PartialTypeSignatures
        PatternSynonyms
        QualifiedDo
        QuantifiedConstraints
        QuasiQuotes
        RecordWildCards
        RecursiveDo
        RoleAnnotations
        TemplateHaskell
        TransformListComp
        TypeFamilyDependencies
        UnboxedSums
        UnboxedTuples
        UndecidableInstances
        UndecidableSuperClasses
        UnicodeSyntax
        UnliftedDatatypes
        UnliftedFFITypes
        UnliftedNewtypes
        ViewPatterns

common executables
    import: common
    hs-source-dirs: app
    build-depends:
          base
        , icfpc2024

executable api
    import: executables
    main-is: API.hs
    build-depends:
          optparse-applicative
        , bytestring
        , text

executable lambdaman-manual
    import: executables
    main-is: LambdaManManual.hs
    build-depends:
          bytestring

executable lambdaman-greedy
    import: executables
    main-is: LambdaManGreedy.hs
    build-depends:
          bytestring

executable lambdaman-breadth
    import: executables
    main-is: LambdaManBreadth.hs
    build-depends:
          bytestring

executable lambdaman-vis
    import: executables
    main-is: LambdaManVis.hs
    build-depends:
          array
        , bytestring

executable spaceship
    import: executables
    main-is: Spaceship.hs
    build-depends:
           array
        ,  random

executable spaceship-dumb
    import: executables
    main-is: SpaceshipDumb.hs
    build-depends:
          bytestring

executable spaceship-greedy
    import: executables
    main-is: SpaceshipGreedy.hs
    build-depends:
          bytestring

executable 3d-sim
    import: executables
    main-is: ThreeD.hs
    build-depends: containers

library
    import: common
    build-depends:
          base
        , aeson
        , attoparsec
        , bytestring
        , containers
        , safe-exceptions
        , file-embed
        , hashable
        , hasql
        , hasql-th
        , http-client-tls
        , http-media
        , integer-logarithms
        , mtl
        , primitive
        , profunctors
        , pqueue
        , servant
        , servant-client
        , template-haskell
        , text
        , time
        , uuid
        , unordered-containers
        , vector
    hs-source-dirs: lib
    exposed-modules:
        , ICFPC.API
        , ICFPC.DB
        , ICFPC.DB.LambdaMan
        , ICFPC.DB.Spaceship
        , ICFPC.Dijkstra
        , ICFPC.Language
        , ICFPC.Language.Combinators
        , ICFPC.Language.Eval
        , ICFPC.Language.TH
        , ICFPC.Language.Pretty
        , ICFPC.LambdaMan
        , ICFPC.LambdaMan.BreadthFirst
        , ICFPC.LambdaMan.Graph
        , ICFPC.LambdaMan.Greedy
        , ICFPC.Spaceship
        , ICFPC.Spaceship.Greedy
        , ICFPC.Spaceship.Manoeuvre
